--- a/WebAuthnIntro/makeCredExample.attestationDirect.html
+++ b/WebAuthnIntro/makeCredExample.attestationDirect.html
@@ -26,13 +26,14 @@
             </div>
 
             <div class="column col-4 text-center" id="dataContainer">
-
+                123
             </div>
         </div>
     </div>
 
     <script>
-        $('#dataContainer').append("<p>123</p>")
+        var x = document.getElementById("dataContainer")
+        alert(x.innerHTML)
         var makeCredsSample = () => {
             var challenge = new Uint8Array(32);
             window.crypto.getRandomValues(challenge);
