--- a/WebAuthnIntro/makeCredExample.attestationDirect.html
+++ b/WebAuthnIntro/makeCredExample.attestationDirect.html
@@ -62,7 +62,7 @@
 
             navigator.credentials.create({ 'publicKey': publicKey })
                 .then((newCredentialInfo) => {
-                    alert('Open your browser console!')
+                    //alert('Open your browser console!')
                     document.writeln('SUCCESS', newCredentialInfo)
                     document.writeln('ClientDataJSON: ', bufferToString(newCredentialInfo.response.clientDataJSON))
                     let attestationObject = CBOR.decode(newCredentialInfo.response.attestationObject);
@@ -74,7 +74,7 @@
                     document.writeln('PublicKey', CBOR.decode(authData.COSEPublicKey.buffer));
                 })
                 .catch((error) => {
-                    alert('Open your browser console!')
+                    //alert('Open your browser console!')
                     document.writeln('FAIL', error)
                 })
         }
